# git-clone

./: .gitignore  CMakeLists.txt  README.md  main.c
app/: App.c  App.h
cli/: cli.c  cli.h
core/: Core.c  Core.h  FileHelper.c  FileHelper.h  Macros.h  hasher.c  hasher.h
db/: commitDb.c  commitDb.h  db.c  db.h  lastEditDb.c  lastEditDb.h  logDb.c  logDb.h  selectedDb.c  selectedDb.h
diffChecker/: DiffSaver.c  DiffSaver.h  Genetator.c  Genetator.h  StringDiffChecker.c  StringDiffChecker.h  diffChecker.c  diffChecker.h  stringDiffSolver.c  stringDiffSolver.h
examples/: color.c  color.h  getListOFAllFiles.c  getListOFAllFiles.h  hasherExample.c  hasherExample.h
examples/app/: trackFilesExample.c  trackFilesExample.h
examples/dbs/: LogDbExample.c  LogDbExample.h  commitDbExample.c  commitDbExample.h  configDbExample.c  configDbExample.h  lastEditDbExample.c  lastEditDbExample.h
examples/diffCheckerExamples/: createBaseOnChangesExamples.c  createBaseOnChangesExamples.h  finalExample.c  finalExample.h
usage/GIT/: App.js  jit.ignore  package-lock.json  package.json
usage/GIT/.JIT/: CURRENT.PATH.TMP  allfiles.tmp
usage/GIT/.JIT/DBS/LAST_EDIT/: LAST_EDIT.db
usage/GIT/.JIT/DBS/LOG/: LOG_DB.db
usage/GIT/.JIT/FIRST_STATE/: jit.ignore
usage/GIT/.JIT/PREV_STATE/: salam.txt
usage/GIT/.JIT/TMP/: ALL_HASHES.TMP
